<resources>
    <string name="app_name">Wallpaper offline</string>


    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="all_wallpapers_are_in_your_hands">All Wallpapers are in your Hands</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="search_something">Enter image link</string>
    <string name="photo_by_photographers">Photo by: photographers</string>

    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ads">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ads_wallpaper">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitials_ads">ca-app-pub-3940256099942544/1033173712</string>
    <string name="todo">TODO</string>

</resources>