<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WallpaperSetActivity">


    <ImageView
        android:id="@+id/wallpaper_full_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/wallpaper_action_container"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop" />

    <View
        android:id="@+id/view_detail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/wallpaper_action_container"
        android:background="@drawable/view_gredient_bg"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/LL_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wallpaper_action_container"
        android:layout_marginBottom="32dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/credit_photo_name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/photo_by_photographers"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wallpaper_action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/banner_wallpaper_tv"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/info_button"
                android:layout_width="45dp"
                android:layout_height="45dp"

                android:layout_gravity="center"
                android:padding="12dp"
                android:src="@drawable/info_icon"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="Info"
                android:textColor="@color/primary"
                android:textSize="11sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/download_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:src="@drawable/download_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:text="Download"
                android:textColor="@color/primary"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/set_wallpaper_button"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:src="@drawable/wallpaper_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="11sp"
                android:textColor="@color/primary"
                android:text="Wallpaper" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner_wallpaper_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/wallpaper_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ads_wallpaper" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />



</RelativeLayout>